--- a/render.yaml
+++ b/render.yaml
@@ -42,20 +42,15 @@ services:
     startCommand: "python nav.py"
 
   - type: cron
-    name: run-publi-xls
-    schedule: "25 */3 * * *"  # 매 3시간마다 25분
-    env: python
-    buildCommand: "pip install -r /opt/render/project/src/requirements.txt"
-    startCommand: |
-      if [ -f xls.py ]; then
-        python publi_xls.py
-      else
-        echo "📎 xls.py 없음: publi_xls.py 생략"
-      fi
-
-  - type: cron
     name: run-marketing
     schedule: "0 * * * *"    # 매 시간 정각
     env: python
     buildCommand: "pip install -r /opt/render/project/src/requirements.txt"
     startCommand: "python marketing.py"
+
+  - type: cron
+    name: run-information
+    schedule: "0 * * * *"    # 매 시간 정각
+    env: python
+    buildCommand: "pip install -r /opt/render/project/src/requirements.txt"
+    startCommand: "python information.py"
