--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,8 @@
 # render.yaml
-
-# (선택) 이 파일이 Render v1 스펙임을 명시
+# (선택) v1 스펙임을 명시
 version: 1
 
-# ── 모든 Job 정의를 이 아래에 넣습니다 ──────────────────────
-jobs:
+services:
   - type: cron
     name: run-marketing
     region: seoul
